# wax-spec-generator

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  readme-for-generated.md  tsconfig.json
python/: .pre-commit-config.yaml  pyproject.toml
python/api_client_generator/: generate_types_from_swagger.py
python/api_client_generator/_private/: check_whether_was_ran_as_script.py  create_collection_class.py  datamodel_generator_signature.py  description_tools.py  export_client_module_to_file.py  format_using_ruff.py  resolve_needed_imports.py
python/api_client_generator/_private/client_class_factory/: common.py  json_rpc.py
python/api_client_generator/_private/common/: array_handle.py  get_type_from_ref_in_camel.py  models_aliased.py
python/api_client_generator/_private/endpoints_factory/: common.py  json_rpc.py  rest.py
python/api_client_generator/_private/json_rpc_tools/: api_name_tools.py  create_client_and_imports.py  create_collection_module.py  create_single_client_module.py
python/api_client_generator/_private/rest_api_tools/: create_client_and_imports.py  create_endpoints_for_all_url_paths.py  rest_method_model.py
python/api_client_generator/json_rpc/: clean_openapi.py  generate_api_client.py  generate_api_collection.py  generate_api_description.py
python/api_client_generator/rest/: generate_api_client_from_swagger.py
python/tests/: generate_clients_and_collections.py
python/tests/manual_definition/: test_collection_generator.py  test_single_class_generator.py
python/tests/swagger/json_rpc/: test_generation_from_swagger.py  valid_output.py
python/tests/swagger/rest/: test_generation_from_swagger.py
python/tests/unit/: test_array_handle.py  test_cut_from_bracket_to_dot.py  test_generic_type_imports.py
scripts/: precommit_hook.sh
src/: constants.ts  generator.ts  index.ts  npm.ts  parse-options.ts
src/hooks/: on-create-route.ts
src/utils/: namespace.ts  object.ts  paths.ts  text.ts  typescript.ts
templates/: LICENSE.md.eta  README.md.eta
wax-test/: wax-test.ts
