[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "api_client_generator"
version = "0.0.0"
description = ""
authors = [
    "Jakub Ziębiński <ziebinskijakub@gmail.com>",
]
packages = [{ include = "api_client_generator" }]

[tool.poetry.dependencies]
python = ">=3.14,<4"
msgspec = "0.20.0"
datamodel-code-generator = "0.49.0"
ruff = "0.11.5"

[tool.poetry.group.dev.dependencies]
mypy = "1.11.2"
pre-commit = "2.21.0"
pytest = "8.3.5"
pytest-asyncio = "0.25.3"

[tool.poetry-dynamic-versioning]
enable = true
pattern = '''^v?(?P<base>\d+\.\d+\.\d+)(?:(?P<stage>[a-zA-Z]+)(?P<revision>\d+))?$'''
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "api_client_generator/__init__.py",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
