[build-system]
requires = [
    "poetry-core>=1.7.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "api_client_generator"
version = "0.0.0"
description = ""
authors = [
    "Jakub Ziębiński <ziebinskijakub@gmail.com>",
]
packages = [{ include = "api_client_generator" }]

[tool.poetry.dependencies]
python = ">=3.14,<4"
msgspec = ">=0.20.0"
datamodel-code-generator = ">=0.52.2"  # Updated from 0.49.0 for Python 3.14 support
ruff = ">=0.11.5"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.2"
pre-commit = ">=2.21.0"
pytest = ">=8.3.5"
pytest-asyncio = ">=0.25.3"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"
format-jinja = """
    {%- set STABLE_BRANCHES = ['develop', 'master', 'main'] -%}
    {%- set effective_branch = branch or env.get('CI_COMMIT_REF_NAME') -%}
    {%- set is_on_tag = distance == 0 -%}
    {%- set is_after_tag = distance > 0 -%}
    {%- set is_tag_checkout = branch is none and is_on_tag -%}
    {%- set is_stable = effective_branch in STABLE_BRANCHES or is_tag_checkout -%}
    {%- set is_feature_branch = is_after_tag and not is_stable -%}
    {%- set post = timestamp|int if is_after_tag else none -%}
    {%- set dev = 0 if is_feature_branch else none -%}
    {%- set local_parts = ['unstable'] if is_feature_branch else [] -%}
    {%- set local_parts = local_parts + ['dirty'] if dirty else local_parts -%}
    {{- serialize_pep440(bump_version(base), stage, revision, post=post, dev=dev, metadata=local_parts) -}}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "api_client_generator/__init__.py",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
